# minispdlog

./: CHANGES.txt  Makefile  README.md  example.cpp  minispdlog.h  test_minispdlog.cpp
c99/: CMAKE_GUIDE.md  CMakeLists.txt  Makefile  README.md  example.c  minispdlog.h  test.c
c99/cmake/: minispdlogConfig.cmake.in
